--- a/ig.ini
+++ b/ig.ini
@@ -1,4 +1,3 @@
 [IG]
-ig = input/ihe.pcc.odh.xml
+ig = fsh-generated/resources/ImplementationGuide-ihe.pcc.odh.json
 template = ihe.fhir.template#current
-usage-stats-opt-out = false
