--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -163,3 +163,4 @@ parameters: # see https://confluence.hl7.org/display/FHIR/Implementation+Guide+P
   usage-stats-opt-out: 'false'
   autoload-resources: 'true'
   shownav: 'true'
+  auto-oid-root: 1.3.6.1.4.1.19376.1.5.3.1.3.43
