--- a/oids.ini
+++ b/oids.ini
@@ -2,14 +2,14 @@
 information1 = This file stores the OID assignments for resources defined in this IG.
 information2 = It must be added to git and committed when resources are added or their id is changed
 information3 = You should not generally need to edit this file, but if you do:
-information4 =  (a) you can change the id of a resource (left side) if you change it's actual id in your source, to maintain OID consistency
-information5 =  (b) you can change the oid of the resource to an OID you assign manually. If you really know what you're doing with OIDs
+information4 = (a) you can change the id of a resource (left side) if you change it's actual id in your source, to maintain OID consistency
+information5 = (b) you can change the oid of the resource to an OID you assign manually. If you really know what you're doing with OIDs
 information6 = There is never a reason to edit anything else
 
 [Key]
 CodeSystem = 2
 ValueSet = 3
-ConceptMap = 1
+ConceptMap = 3
 StructureDefinition = 8
 
 [CodeSystem]
@@ -23,6 +23,8 @@ odf-occupationVS = 1.3.6.1.4.1.19376.1.5.3.1.3.43.48.3
 
 [ConceptMap]
 IHE-PCC-ODH-ISCO08-ValueSet-Mapping = 1.3.6.1.4.1.19376.1.5.3.1.3.43.18.1
+IHE-PCC-ODH-ISCO08-to-SOC2010-Concept-Mapping = 1.3.6.1.4.1.19376.1.5.3.1.3.43.18.2
+IHE-PCC-ODH-SOC2010-to-ISCO08-Concept-Mapping = 1.3.6.1.4.1.19376.1.5.3.1.3.43.18.3
 
 [StructureDefinition]
 odh-CombatZonePeriod = 1.3.6.1.4.1.19376.1.5.3.1.3.43.42.1
