--- a/oids.ini
+++ b/oids.ini
@@ -7,7 +7,7 @@ information5 = (b) you can change the oid of the resource to an OID you assign m
 information6 = There is never a reason to edit anything else
 
 [Key]
-CodeSystem = 2
+CodeSystem = 3
 ValueSet = 3
 ConceptMap = 3
 StructureDefinition = 8
@@ -15,6 +15,7 @@ StructureDefinition = 8
 [CodeSystem]
 ISCO08 = 1.3.6.1.4.1.19376.1.5.3.1.3.43.16.1
 ISICRev4 = 1.3.6.1.4.1.19376.1.5.3.1.3.43.16.2
+ISICRev4not = 1.3.6.1.4.1.19376.1.5.3.1.3.43.16.3
 
 [ValueSet]
 obf-datatype-YesNoVS = 1.3.6.1.4.1.19376.1.5.3.1.3.43.48.1
