--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -4,14 +4,14 @@
 # e.g. ihe.iti.mhds, or ihe.iti.basicaudit
 id: ihe.pcc.odh
 canonical: https://profiles.ihe.net/PCC/ODH
-version: 1.0.0
+version: 1.0.1-current
 name: IHE_PCC_ODH
 title: "IHE FHIR Profile: Occupational Data for Health (ODH) - International"
 status: active
-#releaseLabel: ci-build
+releaseLabel: ci-build
 #releaseLabel: ballot
-releaseLabel: Trial-Implementation
-date: 2024-12-05
+#releaseLabel: Trial-Implementation
+#date: 2024-12-05
 publisher:
   ## Find your domain contact on the https://www.ihe.net/ihe_domains page
   - name: IHE Patient Care Coordination Committee
